Add intro text editor

--- a/forest/src/styles.css
+++ b/forest/src/styles.css
@@ -14,6 +14,8 @@
   -webkit-text-size-adjust: 100%;
 }
 
+/*
+
 .container {
   margin: 0;
   padding-top: 10vh;
@@ -106,4 +108,4 @@ button {
   button:active {
     background-color: #0f0f0f69;
   }
-}
+} */
